CSS - fix waterfall spacing in all non front page

--- a/docroot/sites/default/themes/maxim_base/css/global.css
+++ b/docroot/sites/default/themes/maxim_base/css/global.css
@@ -169,7 +169,8 @@ h1,h2,h3,h4,h5,h6,.field-name-field-channel a,h1#page-title,.item-list .pager, h
 #zone-content { padding-top:25px; }
 
 /* content teaser */
-.content-teaser { display:block; margin-bottom:50px; }
+.content-teaser { display:block; margin-bottom:35px; }
+.page-frontpage .content-teaser { margin-bottom:50px; }
 .content-teaser .teaser-image { position:relative; float:left; display:block; margin-right:10px; margin-bottom:10px; }
 .content-teaser .teaser-image .icon-overlay { position:absolute; width:36px; height:33px; top:0; right:0; }
 .content-teaser.Slideshow .teaser-image .icon-overlay { background:url(../images/icon_slideshow.png) no-repeat;  }
